[lworld] C2 fails with "already heap allocated value types should be linked directly"

XMLWordPrintable

      # Internal Error (/oracle/valhallaL/open/src/hotspot/share/opto/valuetypenode.cpp:238), pid=28541, tid=28552
      # assert(Opcode() == Op_ValueTypePtr || !isa_ValueType()->is_allocated(gvn)) failed: already heap allocated value types should be linked directly

      Current CompileTask:
      C2: 4138 295 ValueList::append (38 bytes)

      Stack: [0x00007fac81eff000,0x00007fac82000000], sp=0x00007fac81ffa6a0, free space=1005k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x1a407bc] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x18c
      V [libjvm.so+0x1a4174f] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
      V [libjvm.so+0xbde9da] report_vm_error(char const*, int, char const*, char const*, ...)+0x12a
      V [libjvm.so+0x19d9790] ValueTypeBaseNode::make_scalar_in_safepoints(Node*, PhaseGVN*)+0x310
      V [libjvm.so+0xb280b8] Compile::process_value_types(PhaseIterGVN&)+0xd8
      V [libjvm.so+0xb36862] Compile::Optimize()+0xb62
      V [libjvm.so+0xb38440] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x1320
      V [libjvm.so+0x8fffe2] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x302
      V [libjvm.so+0xb45ee0] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x3c0
      V [libjvm.so+0xb46bc9] CompileBroker::compiler_thread_loop()+0x269
      V [libjvm.so+0x195f4d7] JavaThread::thread_main_inner()+0x287
      V [libjvm.so+0x195f731] JavaThread::run()+0x191
      V [libjvm.so+0x1643d0a] thread_native_entry(Thread*)+0xfa

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: