8207346: [lworld] C2 fails with "already heap allocated value types should be linked directly"

Reviewed-by: roland